Конфигурация Kubernetes/Kuber_(2.3)/task2.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: kuber-2-3
  labels:
    app: homework-2
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: configmap-nginx
        mountPath: /usr/share/nginx/html/

  volumes:
    - name: configmap-nginx
      configMap:
        name: nginx-config
        items:
          - key: "index"
            path: "index.html"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-1-svc
  namespace: kuber-2-3
spec:
  selector:
    app: homework-2
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: kuber-2-3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: neto-logy.web
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-1-svc
                port:
                  number: 80
  tls:
    - hosts:
        neto-logy.web
      secretName: cert
